--- a/app/front/view/yoga/join.html
+++ b/app/front/view/yoga/join.html
@@ -11,11 +11,9 @@
 <section>
     <div class="product">
         <div class="main"> 
-            <p>全球唯一針對<br> 家庭主婦上班族 <br>的瑜伽課程</p>
-            <p>無經驗也能輕鬆學會</p>
-            <div class="btn">
-                JOIN &nbsp; US
-            </div>
+            <p>全球唯一針對<br>「家庭主婦、孕婦、上班族」<br>線上瑜伽教學課程</p>
+            <p>無經驗也能輕鬆學習</p>
+            <div class="btn">JOIN &nbsp; US</div>
         </div>
     </div>
 </section>
@@ -28,42 +26,45 @@
                         <div class="img">
                             <img src="{__STATIC__}/front/images/pc/shape01.png" alt="">
                         </div>
-                        <p>多方位拉伸舒展方法</p>
+                        <p>多方位舒展伸展方法</p>
                     </li>
                     <li>
                         <div class="img">
                             <img src="{__STATIC__}/front/images/pc/shape02.png" alt="">
                         </div>
-                        <p>舒展发力集中精神</p>
+                        <p>舒緩壓力集中精神</p>
                     </li>
                     <li>
                         <img src="{__STATIC__}/front/images/pc/shape03.png" alt="">
-                        <p>舒展发力集中精神</p>
+                        <p>自我雕出身體線條</p>
                     </li>
                 </ul>
             </div>
             <div  class="symptom_hope">
                 <div class="maxtle">
-                    擁有以下症狀 , <br> 想改善同時心裏受傷
+                    擁有以下症狀 , <br> 想改善同時卻擔心會受傷？
                 </div>
                 <div class="symptom_hope_reson">
                     <div class="reson_l">
                         <ul>
                             <li>
-                                <div class="tle">身为上班族的你</div>
-                                <p>腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛</p>
+                                <div class="tle">身為上班族的妳</div>
+                                <p>腰酸背痛、坐姿肩頸僵硬、久站下半身水腫、小腹大腿粗壯、注意力不集中</p>
+                                <p>想伸展減重卻擔心拉筋姿勢錯誤？動作很難學？</p>
                             </li>
                             <li>
-                                <div class="tle">身为上班族的你</div>
-                                <p>腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛</p>
+                                <div class="tle">身為家庭主婦的妳</div>
+                                <p>睡眠不足、累疲乏、排便不順</p>
+                                <p>繁忙的家務讓你全身痿痛？</p>
+                                <p>照顧家人卻沒時間好好照顧自己？</p>
                             </li>
                             <li>
-                                <div class="tle">身为上班族的你</div>
-                                <p>腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛腰酸背痛</p>
+                                <div class="tle">身為孕婦的妳</div>
+                                <p>腰酸、抽筋、胸悶、水腫不適、壓力大、睡眠品質差、無法專註</p>
+                                <p>想運動放松卻擔心動到胎氣？</p>
+                                <p>擔心動作困難或影響到寶寶？</p>
                             </li>
-
                         </ul>
-
                     </div>
                     <div class="reson_r">
                         <img src="{__STATIC__}/front/images/pc/reson01.png" alt="">
@@ -71,7 +72,7 @@
                 </div>
             </div>
             <div class="asha_question">
-                <p>ahsp 课程将彻底改善所有问题 <br> 最简单的动作最简单的动作最简单的动作最简单的动作最最简单的动作最简单的动作最简单的动作</p>
+                <p>ASHA YOGA的課程將徹底改善所有問題<br>最簡單的動作、最專業的指導<br>不用擔心受傷或動到胎氣<br>跟著ASHA老師一起輕鬆學習</p>
             </div>
             <div class="course_time">
                 <div class="course_time_l">
@@ -79,7 +80,7 @@
                 </div>
                 <div class="course_time_r">
                     <div class="tle">
-                        课程 Asha
+                        認識 Asha
                     </div>
                     <p>
                         孕妇瑜伽，空中瑜伽孕妇瑜伽，空中瑜伽孕妇瑜伽，空中瑜伽
