--- a/app/front/view/yoga/join.html
+++ b/app/front/view/yoga/join.html
@@ -55,7 +55,7 @@
                             <li>
                                 <div class="tle">身為家庭主婦的妳</div>
                                 <p>睡眠不足、累疲乏、排便不順</p>
-                                <p>繁忙的家務讓你全身痿痛？</p>
+                                <p>繁忙的家務讓妳全身痿痛？</p>
                                 <p>照顧家人卻沒時間好好照顧自己？</p>
                             </li>
                             <li>
@@ -83,31 +83,30 @@
                         認識 Asha
                     </div>
                     <p>
-                        孕妇瑜伽，空中瑜伽孕妇瑜伽，空中瑜伽孕妇瑜伽，空中瑜伽
+                        RYT200、孕婦瑜伽、空中瑜伽、空中療愈、瑜伽輪、熱瑜伽等師資執照。
                     </p>
                     <ul>
                         <li>
-                            <p>200个小时瑜伽资格证</p>
+                            <p>200小時的瑜伽師資證照</p>
                         </li>
                         <li>
-                            <p>200个小时瑜伽资格证</p>
+                            <p>課程累積時數超過1000小時</p>
                         </li>
                         <li>
-                            <p>200个小时瑜伽资格证</p>
+                            <p>習得多樣課程</p>
                         </li>
                         <li>
-                            <p>200个小时瑜伽资格证</p>
+                            <p>瑜伽教室授課老師</p>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="symptom_bot">
                 <div class="tle">
-                    整合各项瑜伽课程	整合各项
+                    整合各類瑜伽有點,帶您體驗最棒的瑜伽課程
                 </div>
-                <p>
-                    大大提升大大提升大大提升大大提升大大提升大大提升大大提升
-                </p>
+                <p>只要兩週,對於瑜伽的技巧就會大大提升,</p>
+                <p>妳不需要怕困難！怕筋骨太硬！怕自己做不到！</p>
                 <div class="wetamark">
                     <img src="{__STATIC__}/front/images/pc/mark.png" alt="">
                 </div>
@@ -119,24 +118,19 @@
 <section>
     <div class="feadback">
         <div class="container">
-            <div  class="fead_tle">
-                多名学员的真实反馈
-            </div>
-            <p>学习简单，彻底改善情况，受用一辈子</p>
-            <p>不需要任何器材，只需跟着asha老师就能轻松做到</p>
+            <div  class="fead_tle">多名學員真實反饋</div>
+            <p>學習簡單,徹底改善情況,受用一輩子！</p>
+            <p>不需要任何器材,只需跟著Asha老師就能輕鬆做到！</p>
             <div class="flow_list">
                 <div class="item">
                     <div class="item_t">
                         <div class="user">
                             <img src="{__STATIC__}/front/images/pc/user.png" alt="">
                         </div>
-
-                        <p>小针小针小针</p>
+                        <p>M*a Chi</p>
                     </div>
                     <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-
+                        我是每天都坐在辨公室的小資女，因長期用電腦、手機，肩頸都超儒硬，然後屁股大就算了，下半身還超水腫看不到腳踝，幸虧同事介紹Asha老師的課程，解決我肩頸問題，現在屁股還翹起來了，搭配睡前擡腳，腳踝也出現了!利用上班的休息時間起來動一動真不錯 !
                     </div>
                 </div>
                 <div class="item">
@@ -144,12 +138,12 @@
                         <div class="user">
                             <img src="{__STATIC__}/front/images/pc/user.png" alt="">
                         </div>
-                        <p>小针小针小针</p>
+                        <p>陳*樺</p>
                     </div>
                     <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-
+                        我是一個二寶媽，平常忙帶小孩都沒時間運動，產後的體能都還沒恢復成少女時期，後來在媽媽群組看到有人推薦Asha老師的線上課程，就買來試試。<br/>
+                        本來以為我松弛的肉做起來會很困難，結果完全沒有高度動作!即使肌力不足、腿腳無力都能輕松完成!我現在已是辣媽了喔 ~~老公都想生第三了，哈哈哈。<br/>
+                        大家快趁小孩睡覺時動起來~~~
                     </div>
                 </div>
                 <div class="item">
@@ -157,12 +151,11 @@
                         <div class="user">
                             <img src="{__STATIC__}/front/images/pc/user.png" alt="">
                         </div>
-                        <p>小针小针小针</p>
+                        <p>小貞</p>
                     </div>
                     <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-
+                        我是懷孕滿5個月的媽媽小貞，這次懷了二寶感覺跟第一胎完全不一樣，我剛懷孕滿三月時瘋狂的孕吐，非常的不舒服，食欲也很差，心情也跟著不好...直到有一天，一個國小同學看我時跟我說，她之前懷孕也是跟我一樣的狀況，但後來她去上了專門給孕婦上的瑜伽課，就舒很多。<br/>
+                        我正準備要報名時，疫情整個大爆發...沒辨法去上實體課程，正巧我看到ASHA老師的線上瑜伽課程,看了課程介紹後二話不說就立刻購買，目前已經持續上課一個多月了，真的超神奇...我原本不適的癥狀都沒了之外，現在每天精神都超好，心情也就好了起來真的超級感謝ASHA老師的課程! 讓我懷孕期間還可以在家上這麽專業的課程，推薦大家 !
                     </div>
                 </div>
                 <div class="item">
@@ -170,50 +163,12 @@
                         <div class="user">
                             <img src="{__STATIC__}/front/images/pc/user.png" alt="">
                         </div>
-
-                        <p>小针小针小针</p>
+                        <p>林*萱</p>
                     </div>
                     <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item_t">
-                        <div class="user">
-                            <img src="{__STATIC__}/front/images/pc/user.png" alt="">
-                        </div>
-                        <p>小针小针小针</p>
-                    </div>
-                    <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="item_t">
-                        <div class="user">
-                            <img src="{__STATIC__}/front/images/pc/user.png" alt="">
-                        </div>
-                        <p>小针小针小针</p>
-                    </div>
-                    <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item_t">
-                        <div class="user">
-                            <img src="{__STATIC__}/front/images/pc/user.png" alt="">
-                        </div>
-                        <p>小针小针小针</p>
-                    </div>
-                    <div class="item_count">
-                        许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下许诶下
-
+                        我是剛畢業的菜鳥上班族，我的工作整天都要坐在辨公室裏打電腦，下班回到家就是癱軟在沙發上完全不想動，一直想找一個合適我的瑜伽課程，但又因為我才剛出社會，預算不是很高，外面的瑜伽課程一堂都要1-2000元，小資女的我真的有點負擔不起。<br/>
+                        有天在Facebook上看到朋友分享ASHA老師的線上瑜伽課程，有針對上班族設計的，價格又超便宜 (居然是外面一堂課的價格!!) 課程內容又豐富，立馬買來學習。我現在上班時只要哪裏感覺到不舒服我就會照ASHA老師教的動作做個幾次，真的舒緩了非常有感!<br/>
+                        現在回到家也不會像以前那麽累，真心推薦給所有上班族! 這絕對是我今年投資自已最值得的一件事情了! !
                     </div>
                 </div>
             </div>
@@ -233,26 +188,34 @@
             <div class="need_list">
                 <div class="list">
                     <div class="ques">
-                        我没有任何瑜伽道具，可以联系吗
+                        我沒有任何瑜伽道具,我會需要購買嗎？
                     </div>
                     <div class="count">
-                        我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗
+                        不管在家,在辦公室或是在任何場合,完全不需要買任何瑜伽道具,妳就能執行線上課程學到的瑜伽知識及動作！
                     </div>
                 </div>
                 <div class="list">
                     <div class="ques">
-                        我没有任何瑜伽道具，可以联系吗
+                        我的骨頭很硬,也能做嗎？
                     </div>
                     <div class="count">
-                        我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗
+                        可以的,在做瑜伽的過程中不僅能放鬆身、心、靈,還能讓自己的柔軟度變好喔！但每個人身體狀況都不同,只要盡力做到自己的極限,就是最完美的囉！
                     </div>
                 </div>
                 <div class="list">
                     <div class="ques">
-                        我没有任何瑜伽道具，可以联系吗
+                        我爸媽5、60歲了,適合做瑜伽嗎？
                     </div>
                     <div class="count">
-                        我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗我没有任何瑜伽道具，可以联系吗
+                        瑜伽不分年齡,課程的動作舒緩放鬆,很適合年齡大的人做喔！
+                    </div>
+                </div>
+                <div class="list">
+                    <div class="ques">
+                        我平時有在健身,可以跟瑜伽一起做嗎？
+                    </div>
+                    <div class="count">
+                        不同的運動方式都有其不同功效，只要是妳真正感受到,對自己的身心健康有幫助,那就是適合妳的方式。
                     </div>
                 </div>
             </div>
