--- a/app/front/view/layout/layout.html
+++ b/app/front/view/layout/layout.html
@@ -48,6 +48,7 @@
             </div>
         </footer>
         <script src="{__STATIC__}/front/js/jquery.js"></script>
+        <script src="{__STATIC__}/assets/layui/layui.js"></script>
         {block name="js"}{/block}
         <script>
             $('.join_us').click(function () {
