--- a/app/front/view/yoga/video.html
+++ b/app/front/view/yoga/video.html
@@ -35,78 +35,48 @@
                 </div>
             </div>
             <div class="intro_course">
-                <div class="intro_ve">
+                <div class="intro_ve" style="width:100%">
                     <div class="intro_tle">
-                        <div class="tle_l">
-                            <p>上班族</p>
-                            <p>瑜伽课程</p>
-                        </div>
-                        <div class="tle_r">
-                            <p>Action <span>10</span>(坐姿)瑜伽</p>
-                        </div>
+                        <div class="tle_l"><p></p><p></p></div>
+                        <div class="tle_r"><p></p></div>
                     </div>
                     <div class="video">
-                        <img src="{__STATIC__}/front/images/pc/video.png" alt="">
+                        <video src="https://video.yun.jxntv.cn/fs/livecut/20230202/bXjIYXvh.mp4" id="video_here" width="100%" controls="controls" autoplay="autoplay">
+                            <!--<source type="video/mp4">-->
+                        </video>
                     </div>
                 </div>
-
-                <!-- <div class="intro_course_l clear">
-                        <p>我的課程 <span>難度</span></p>
-                        <div class="img">
-                                <img src="{__STATIC__}/front/images/pc/course.png" alt="">
-                        </div>
-                        <div class="posabs">
-                                <p>ASHA <br> YOU GA</p>
-                        </div>
-                </div>
-                <div class="intro_course_r clear">
-                        <div class="duty">
-                                <p>上班族 </p>
-                                <p>瑜伽課程</p>
-                        </div>
-                        <div class="times">
-                                <p>Action <span>10</span>(坐姿)臀部</p>
-                        </div>
-                        <div class="audios">——————————————————————</div>
-                        <div class="duty_btn">
-                                <div class="btn">
-                                        <p>重新观看</p>
-                                        <img src="{__STATIC__}/front/images/pc/cour01.png" alt="">
-                                </div>
-                                <div class="btn">
-                                        <p>重新观看</p>
-                                        <img src="{__STATIC__}/front/images/pc/cour02.png" alt="">
-                                </div>
-                        </div>
-                </div> -->
             </div>
             <div class="course_list">
-                <p>我的课程列表</p>
+                <p>我的課程列表</p>
                 <ul id="accordion" class="accordion">
+
+                    {foreach $cate as $key => $vo}
                     <li>
                         <div class="link">
                             <div class="pro_box">
                                 <div class="pro_l">
-                                    <p>上班族</p>
-                                    <p>瑜伽课程</p>
+                                    <p>{$vo['title']}</p>
+                                    <p>{$vo['desc']}</p>
                                 </div>
                                 <div class="pro_r">
-                                    <p>20部影片</p>
+                                    <p>{:count($vo['course'])}部影片</p>
                                     <img src="{__STATIC__}/front/images/pc/select_bot.png" alt="">
                                 </div>
 
                             </div>
                         </div>
-                        <ul class="navContent " style="display: block;">
-
+                        <ul class="navContent " {if $key==0}style="display: block;"{/if}>
+                            {notempty name="$vo['course']"}
+                            {foreach $vo['course'] as $k => $v}
                             <li>
                                 <div class="action_l">
-                                    <p>Action 1</p>
-                                    参展手臂
+                                    <p>Action {$k+1}</p>
+                                    {$v['title']}
                                 </div>
                                 <div class="action_r">
                                     <p></p>
-                                    <div class="player">
+                                    <div class="player click_player" data-course_id="{$v['id']}">
                                         最新课程
                                         <div class="play_btn">
                                             <img src="{__STATIC__}/front/images/pc/cour01.png" alt="">
@@ -114,80 +84,8 @@
                                     </div>
                                 </div>
                             </li>
-
-                            <li>
-                                <div class="action_l">
-                                    <p>Action 1</p>
-                                    参展手臂
-                                </div>
-                                <div class="action_r">
-                                    <p></p>
-                                    <div class="player">
-
-                                        <div class="play_btn">
-                                            <img src="{__STATIC__}/front/images/pc/player.png" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-
-                            <li>
-                                <div class="more">
-                                    更多影片
-                                    <img src="{__STATIC__}/front/images/pc/more_left.png" alt="">
-                                </div>
-                            </li>
-                        </ul>
-
-                    </li>
-                    <li>
-                        <div class="link">
-                            <div class="pro_box">
-                                <div class="pro_l">
-                                    <p>上班族</p>
-                                    <p>瑜伽课程</p>
-                                </div>
-                                <div class="pro_r">
-                                    <p>20部影片</p>
-                                    <img src="{__STATIC__}/front/images/pc/select_bot.png" alt="">
-                                </div>
-
-                            </div>
-                        </div>
-                        <ul class="navContent " >
-
-                            <li>
-                                <div class="action_l">
-                                    <p>Action 1</p>
-                                    参展手臂
-                                </div>
-                                <div class="action_r">
-                                    <p></p>
-                                    <div class="player">
-                                        最新课程
-                                        <div class="play_btn">
-                                            <img src="{__STATIC__}/front/images/pc/cour01.png" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-
-                            <li>
-                                <div class="action_l">
-                                    <p>Action 1</p>
-                                    参展手臂
-                                </div>
-                                <div class="action_r">
-                                    <p></p>
-                                    <div class="player">
-
-                                        <div class="play_btn">
-                                            <img src="{__STATIC__}/front/images/pc/player.png" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-
+                            {/foreach}
+                            {/notempty}
                             <li>
                                 <div class="more">
                                     更多影片
@@ -196,10 +94,8 @@
                             </li>
                         </ul>
                     </li>
-
+                    {/foreach}
                 </ul>
-
-
             </div>
         </div>
     </div>
@@ -213,6 +109,20 @@
     $(function () {
         $(".pro_r").click(function () {
             $(this).parent(".pro_box").parent(".link").next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500);
+        });
+        $('.click_player').click(function () {
+            var course_id = $(this).data('course_id');
+            $.get("/front/yoga/get_order", {'course_id': course_id}, function (res) {
+                if (res.code == 1) {
+                    layer.msg(res.msg, function () {
+                        $('.tle_l p:first').html(res.data.info.cate_title);
+                        $('.tle_l p:last').html(res.data.info.desc);
+                        $('.tle_r p').html(res.data.info.title);
+                        $('#video_here').attr('src', res.data.info.course_url);
+                    });
+                }
+            }, 'json');
+            return false;
         });
     });
 </script>
