--- a/app/front/view/yoga/course.html
+++ b/app/front/view/yoga/course.html
@@ -159,7 +159,7 @@
 {block name="script"}
 <script language="javascript">
     $('.ljgm').click(function () {
-        window.location.href = "{:url('/front/yoga/cart_l')}";
+        window.location.href = "{:url('/front/yoga/cart')}";
     });
 </script>
 {/block}
