--- a/app/front/view/yoga/video.html
+++ b/app/front/view/yoga/video.html
@@ -73,7 +73,7 @@
                                     {$v['title']}
                                 </div>
                                 <div class="action_r">
-                                    <p></p>
+                                    時長：{$v['course_duration']}
                                     <div class="player click_player" data-course_id="{$v['id']}">
                                         最新课程
                                         <div class="play_btn">
