--- a/app/front/view/yoga/video.html
+++ b/app/front/view/yoga/video.html
@@ -75,7 +75,7 @@
                                 <div class="action_r">
                                     時長：{$v['course_duration']}
                                     <div class="player click_player" data-course_id="{$v['id']}">
-                                        最新课程
+                                        最新課程
                                         <div class="play_btn">
                                             <img src="{__STATIC__}/front/images/pc/cour01.png" alt="">
                                         </div>
