--- a/app/admin/view/yoga_cate/cate_list.html
+++ b/app/admin/view/yoga_cate/cate_list.html
@@ -35,7 +35,7 @@
                     {field: 'title', title: '分類名稱'},
                     {field: 'pid', title: '父級ID', align: 'center'},
                     {title: '操作', align: 'center', templet: function (d) {
-                            var html = '<span class="layui-btn-group"><span class="layui-btn layui-btn-normal layui-btn-xs" lay-event="add">添加子分類</span><span class="layui-btn layui-btn-xs" lay-event="edit">編輯</span><span class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">刪除</span></span>';
+                            var html = '<span class="layui-btn-group"><span class="layui-btn layui-btn-xs" lay-event="edit">編輯</span><span class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">刪除</span></span>';
                             return html;
                         }
                     }
